[gd_scene load_steps=6 format=3 uid="uid://clak1ljsk80a5"]

[ext_resource type="Script" uid="uid://qp33f5h0e8as" path="res://scripts/Inventory/inventory.gd" id="1_hj2ta"]
[ext_resource type="PackedScene" uid="uid://cgfgnqu8fva07" path="res://scenes/Container.tscn" id="1_qw0r6"]
[ext_resource type="Script" uid="uid://cs4wneh7lwkyj" path="res://scripts/Inventory/Containers/default_container.gd" id="3_ty45s"]
[ext_resource type="Script" uid="uid://vb5ocjkr8v0o" path="res://scripts/Inventory/Containers/helmet_container.gd" id="4_yyk2a"]
[ext_resource type="Script" uid="uid://x230qed11fr2" path="res://scripts/Inventory/Containers/hotbar_container.gd" id="5_yyk2a"]

[node name="Inventory" type="CanvasLayer"]
script = ExtResource("1_hj2ta")

[node name="InventoryContainers" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemContainer" parent="InventoryContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 1052.0
offset_top = 40.0
offset_right = 1052.0
offset_bottom = 40.0
script = ExtResource("4_yyk2a")

[node name="BackpackContainers" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemContainer" parent="BackpackContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 108.0
offset_top = -68.0
offset_right = 108.0
offset_bottom = -68.0
script = ExtResource("3_ty45s")

[node name="ItemContainer2" parent="BackpackContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 269.0
offset_top = -65.0
offset_right = 269.0
offset_bottom = -65.0
script = ExtResource("3_ty45s")

[node name="ItemContainer3" parent="BackpackContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 432.0
offset_top = -64.0
offset_right = 432.0
offset_bottom = -64.0
script = ExtResource("3_ty45s")

[node name="HotbarContainers" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemContainer" parent="HotbarContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 300.0
offset_top = 588.0
offset_right = 300.0
offset_bottom = 588.0
script = ExtResource("5_yyk2a")

[node name="ItemContainer2" parent="HotbarContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 456.0
offset_top = 588.0
offset_right = 456.0
offset_bottom = 588.0
script = ExtResource("5_yyk2a")

[node name="ItemContainer3" parent="HotbarContainers" instance=ExtResource("1_qw0r6")]
layout_mode = 1
offset_left = 624.0
offset_top = 586.0
offset_right = 624.0
offset_bottom = 586.0
script = ExtResource("5_yyk2a")

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
offset_left = 29.0
offset_top = 24.0
offset_right = 304.0
offset_bottom = 51.0
mouse_filter = 2
value = 100.0

[node name="PlayersReady" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -15.0
offset_right = -9.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 6

[node name="TeleportTimerLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -156.0
offset_right = 109.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[node name="BlackScreen" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VictoryLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 108
text = "Victory!!1"

[node name="SuperVictoryLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = 53.0
offset_top = 215.0
offset_right = 1449.5
offset_bottom = 489.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 116
bbcode_enabled = true
text = "[rainbow freq=0.2 sat=1.4 high=5.0] Super Victory!!11!!!!!1 [/rainbow]"
fit_content = true

[node name="DefeatLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 108
text = "Defeat :C"
